--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.ts src",
-    "format": "prettier --write src"
+    "format": "prettier --write src",
+    "deploy": "npm run build && sh deploy.sh"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.0.2",
